sql/sql_class.cc
@@ -7476,6 +7476,34 @@ int THD::binlog_query(THD::enum_binlog_query_type qtype, char const *query_arg,
   DBUG_RETURN(0);
 }
 
+
+/**
+  Binlog current query as a statement if binary log is open
+
+  @retval false   ok
+  @retval true    error
+*/
+
+
+bool THD::binlog_current_query()
+{
+  if (!mysql_bin_log.is_open())
+    return 0;
+
+  /*
+    The following is needed if the query was "ignored" by a shared distributed
+    engine, in which case decide_logging_format() will set the binlog filter
+  */
+  reset_binlog_local_stmt_filter();
+  clear_binlog_local_stmt_filter();
+  return binlog_query(THD::STMT_QUERY_TYPE, query(), query_length(),
+                      /* is_trans */     FALSE,
+                      /* direct */       FALSE,
+                      /* suppress_use */ FALSE,
+                      /* Error */        0) > 0;
+}
+
+
 void
 THD::wait_for_wakeup_ready()
 {
