sql/sql_class.h
@@ -3484,6 +3484,7 @@ public:
                    char const *query, ulong query_len, bool is_trans,
                    bool direct, bool suppress_use,
                    int errcode);
+  bool binlog_current_query();
 #endif
 
   inline void
